--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,14 +48,13 @@
         <activity
             android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.service.ServiceActivity"
             android:windowSoftInputMode="stateHidden|adjustPan" />
-        <activity android:name="com.bunbeauty.ideal.myapplication.createService.MyTime" />
-        <activity android:name="com.bunbeauty.ideal.myapplication.createService.MyCalendar" />
         <activity android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.editing.EditProfileActivity" />
         <activity
             android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.editing.EditServiceActivity"
             android:windowSoftInputMode="stateHidden|adjustPan" />
         <activity android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.logIn.VerifyPhoneNumberActivity" />
         <activity android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.ScheduleActivity" />
+        <activity android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.SessionsActivity" />
 
         <service android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.business.notifications.MyFirebaseInstanceIdService">
             <intent-filter>
