--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,7 @@
         <activity
             android:name="com.bunbeauty.ideal.myapplication.clean_architecture.mvp.activities.comments.CreationCommentActivity"
             android:theme="@style/Theme.AppCompat.Dialog" />
-        <activity
-            android:name="com.bunbeauty.ideal.myapplication.clean_architecture.mvp.activities.comments.CurrentCommentActivity" />
+        <activity android:name="com.bunbeauty.ideal.myapplication.clean_architecture.mvp.activities.comments.CurrentCommentActivity" />
         <activity android:name="com.bunbeauty.ideal.myapplication.clean_architecture.mvp.activities.comments.UserCommentsActivity" />
         <activity android:name="com.bunbeauty.ideal.myapplication.clean_architecture.mvp.activities.chat.MessagesActivity" />
         <activity android:name="com.bunbeauty.ideal.myapplication.clean_architecture.mvp.activities.subscriptions.SubscriptionsActivity" />
