--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,10 +44,10 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.core:core:1.3.1'
 
-    implementation 'com.google.firebase:firebase-functions:19.0.2'
+    implementation 'com.google.firebase:firebase-functions:19.1.0'
     implementation 'com.google.firebase:firebase-messaging:20.2.4'
 
-    implementation 'com.google.android.material:material:1.2.0'
+    implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     testImplementation 'junit:junit:4.13'
     testImplementation "io.mockk:mockk:1.9.3"
@@ -57,13 +57,14 @@ dependencies {
 
     //Espresso
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestCompile 'com.android.support.test.espresso:espresso-contrib:3.0.2'
 
     //firebase
     implementation 'com.google.firebase:firebase-core:17.5.0'
-    implementation 'com.google.firebase:firebase-database:19.3.1'
+    implementation 'com.google.firebase:firebase-database:19.4.0'
     implementation 'com.google.firebase:firebase-auth:19.3.2'
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.google.firebase:firebase-storage:19.1.1'
+    implementation 'com.google.firebase:firebase-storage:19.2.0'
     //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
     //cropper
