--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,12 @@ apply plugin: 'com.google.gms.google-services'
 
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.0"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
     defaultConfig {
         applicationId "com.bunbeauty.ideal.myapplication"
-        minSdkVersion 21
-        targetSdkVersion 30
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 2
         versionName "1.0.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -39,88 +39,89 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.core:core:1.3.1'
+    implementation "androidx.appcompat:appcompat:$rootProject.appcompatVersion"
+    implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintlayoutVersion"
+    implementation "androidx.legacy:legacy-support-v4:$rootProject.legacySupportVersion"
+    implementation "androidx.core:core:$rootProject.coreVersion"
 
-    implementation 'com.google.firebase:firebase-functions:19.1.0'
-    implementation 'com.google.firebase:firebase-messaging:20.2.4'
+    implementation "com.google.firebase:firebase-functions:$rootProject.firebaseFunctionVersion"
+    implementation "com.google.firebase:firebase-messaging:$rootProject.firebaseMessagingVersion"
 
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    testImplementation 'junit:junit:4.13'
-    testImplementation "io.mockk:mockk:1.9.3"
-    androidTestImplementation 'androidx.test:runner:1.3.0'
-    androidTestImplementation 'androidx.test:rules:1.3.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    implementation "com.google.android.material:material:$rootProject.materialVersion"
+    implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.lifecycleExtensionsVersion"
+    testImplementation "junit:junit:$rootProject.junitVersion"
+    testImplementation "io.mockk:mockk:$rootProject.mockkVersion"
+    androidTestImplementation "androidx.test:runner:$rootProject.runnerVersion"
+    androidTestImplementation "androidx.test:rules:$rootProject.rulesVersion"
+    androidTestImplementation "androidx.test.ext:junit:$rootProject.junitVersion"
 
     //Espresso
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:3.0.2'
+    androidTestImplementation "androidx.test.espresso:espresso-core:$rootProject.espressoCoreVersion"
+    androidTestImplementation "com.android.support.test.espresso:espresso-contrib:$rootProject.espressoContribVersion"
+
 
     //firebase
-    implementation 'com.google.firebase:firebase-core:17.5.0'
-    implementation 'com.google.firebase:firebase-database:19.4.0'
-    implementation 'com.google.firebase:firebase-auth:19.3.2'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.google.firebase:firebase-storage:19.2.0'
+    implementation "com.google.firebase:firebase-core:$rootProject.firebaseCoreVersion"
+    implementation "com.google.firebase:firebase-database:$rootProject.firebaseDatabaseVersion"
+    implementation "com.google.firebase:firebase-auth:$rootProject.firebaseAuthVersion"
+    implementation "com.google.code.gson:gson:$rootProject.gsonVersion"
+    implementation "com.google.firebase:firebase-storage:$rootProject.firebasesStorageVersion"
     //picasso
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation "com.squareup.picasso:picasso:$rootProject.picassoVersion"
     //cropper
-    api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
+    api "com.theartofdev.edmodo:android-image-cropper:$rootProject.androidImageCropperVersion"
     //recycler
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation "androidx.recyclerview:recyclerview:$rootProject.recyclerviewVersion"
     //kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     //dagger 2
-    implementation "com.google.dagger:dagger:$dagger_version"
-    kapt "com.google.dagger:dagger-compiler:$dagger_version"
-    implementation "com.google.dagger:dagger-android:$dagger_version"
-    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+    implementation "com.google.dagger:dagger:$rootProject.daggerVersion"
+    kapt "com.google.dagger:dagger-compiler:$rootProject.daggerVersion"
+    implementation "com.google.dagger:dagger-android:$rootProject.daggerVersion"
+    kapt "com.google.dagger:dagger-android-processor:$rootProject.daggerVersion"
 
     //room
-    implementation 'androidx.room:room-runtime:2.2.5'
-    kapt 'androidx.room:room-compiler:2.2.5'
-    implementation 'androidx.room:room-ktx:2.2.5'
+    implementation "androidx.room:room-runtime:$rootProject.roomRuntimeVersion"
+    kapt "androidx.room:room-compiler:$rootProject.roomCompilerVersion"
+    implementation "androidx.room:room-ktx:$rootProject.roomKtxVersion"
 
     //moxyX
-    implementation 'tech.schoolhelper:moxy-x:1.7.0'
-    kapt 'tech.schoolhelper:moxy-x-compiler:1.7.0'
-    implementation 'tech.schoolhelper:moxy-x-androidx:1.7.0'
+    implementation "tech.schoolhelper:moxy-x:$rootProject.moxyXVersion"
+    kapt "tech.schoolhelper:moxy-x-compiler:$rootProject.moxyXCompilerVersion"
+    implementation "tech.schoolhelper:moxy-x-androidx:$rootProject.moxyXAndroidxVersion"
 
     //coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.kotlonxCoroutinesAndroid"
 
     // Required -- JUnit 4 framework
-    testImplementation 'junit:junit:4.13'
+    testImplementation "junit:junit:$rootProject.junitVersion"
     // Optional -- Robolectric environment
-    testImplementation 'androidx.test:core:1.3.0'
+    testImplementation "androidx.test:core:$rootProject.coreVersion"
 
     // Optional -- Mockito framework
-    testImplementation 'org.mockito:mockito-core:3.0.0'
-    testImplementation 'org.mockito:mockito-inline:3.0.0'
+    testImplementation "org.mockito:mockito-core:$rootProject.mockitoCoreVersion"
+    testImplementation "org.mockito:mockito-inline:$rootProject.mockitoInlineVersion"
 
     //joda date-time
-    implementation 'net.danlew:android.joda:2.10.3'
-    testImplementation 'joda-time:joda-time:2.10.3'
+    implementation "net.danlew:android.joda:$rootProject.androidJodaVersion"
+    testImplementation "joda-time:joda-time:$rootProject.jodaTimeVersion"
 
     //keyboard listener for messages
-    implementation 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:3.0.0-RC2'
+    implementation "net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:$rootProject.keyboardvisibilityeventVersion"
 
     //material
     implementation "com.google.android.material:material:$material_design_version"
 
-    implementation 'com.jaredrummler:material-spinner:1.3.1'
-    implementation 'com.miguelcatalan:materialsearchview:1.4.0'
-    implementation 'me.zhanghai.android.materialratingbar:library:1.4.0'
+    implementation "com.jaredrummler:material-spinner:$rootProject.materialSpinnerVersion"
+    implementation "com.miguelcatalan:materialsearchview:$rootProject.materialsearchviewVersion"
+    implementation "me.zhanghai.android.materialratingbar:library:$rootProject.libraryVersion"
 
     //Subsampling Scale Image View
-    implementation 'com.davemorrissey.labs:subsampling-scale-image-view-androidx:3.10.0'
+    implementation "com.davemorrissey.labs:subsampling-scale-image-view-androidx:$rootProject.subsamplingScaleImageViewAndroidxVersion"
 
     //for styles
-    implementation 'com.airbnb.android:paris:1.5.0'
+    implementation "com.airbnb.android:paris:$rootProject.parisVersion"
 
 }
 repositories {
