--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext {
-        kotlin_version = '1.4.10'
-        dagger_version = '2.29'
-        material_design_version = '1.3.0-alpha02'
-    }
-
+    ext.kotlin_version = "1.4.10"
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
+        classpath 'com.android.tools.build:gradle:4.1.1'
         classpath 'com.google.gms:google-services:4.3.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
@@ -26,6 +21,58 @@ allprojects {
         google()
         jcenter()
     }
+}
+ext {
+    minSdkVersion = 21
+    targetSdkVersion = 30
+    compileSdkVersion = 30
+    buildToolsVersion = "30.0.0"
+    constraintLayoutVersion = "1.1.3"
+    kotlin_version = '1.4.10'
+    material_design_version = '1.3.0-alpha03'
+    espressoCoreVersion="3.3.0"
+    espressoContribVersion="3.0.2"
+    appcompatVersion="1.2.0"
+    constraintlayoutVersion="2.0.4"
+    legacySupportVersion="1.0.0"
+    coreVersion="1.3.2"
+    firebaseFunctionVersion="19.1.0"
+    firebaseMessagingVersion="21.0.0"
+    materialVersion="1.2.1"
+    lifecycleExtensionsVersion="2.2.0"
+    junitVersion="4.13"
+    mockkVersion="1.9.3"
+    runnerVersion="1.3.0"
+    rulesVersion="1.3.0"
+    junitVersion="1.1.2"
+    firebaseCoreVersion="18.0.0"
+    firebaseDatabaseVersion="19.5.1"
+    firebaseAuthVersion="20.0.1"
+    gsonVersion="2.8.6"
+    firebasesStorageVersion="19.2.0"
+    picassoVersion="2.71828"
+    androidImageCropperVersion="2.8.0"
+    recyclerviewVersion="1.1.0"
+    daggerVersion="2.29"
+    roomRuntimeVersion="2.2.5"
+    roomCompilerVersion="2.2.5"
+    roomKtxVersion="2.2.5"
+    moxyXVersion="1.7.0"
+    moxyXCompilerVersion="1.7.0"
+    moxyXAndroidxVersion="1.7.0"
+    kotlonxCoroutinesAndroid="1.3.2"
+    junitVersion="4.13"
+    coreVersion="1.3.0"
+    mockitoCoreVersion="3.0.0"
+    mockitoInlineVersion="3.0.0"
+    androidJodaVersion="1.10.3"
+    jodaTimeVersion="2.10.3"
+    keyboardvisibilityeventVersion="3.0.0-RC2"
+    materialSpinnerVersion="1.3.1"
+    materialsearchviewVersion="1.4.0"
+    libraryVersion="1.4.0"
+    parisVersion="1.5.0"
+    subsamplingScaleImageViewAndroidxVersion="3.10.0"
 }
 
 task clean(type: Delete) {
