--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = "1.4.10"
+    ext.kotlin_version = "1.4.20"
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.1'
-        classpath 'com.google.gms:google-services:4.3.3'
+        classpath 'com.google.gms:google-services:4.3.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -27,24 +28,22 @@ ext {
     targetSdkVersion = 30
     compileSdkVersion = 30
     buildToolsVersion = "30.0.0"
-    constraintLayoutVersion = "1.1.3"
-    kotlin_version = '1.4.10'
+    kotlinVersion = '1.4.20'
     material_design_version = '1.3.0-alpha03'
     espressoCoreVersion="3.3.0"
     espressoContribVersion="3.0.2"
     appcompatVersion="1.2.0"
     constraintlayoutVersion="2.0.4"
     legacySupportVersion="1.0.0"
-    coreVersion="1.3.2"
     firebaseFunctionVersion="19.1.0"
     firebaseMessagingVersion="21.0.0"
     materialVersion="1.2.1"
     lifecycleExtensionsVersion="2.2.0"
-    junitVersion="4.13"
+    junitVersion="4.13.1"
     mockkVersion="1.9.3"
     runnerVersion="1.3.0"
     rulesVersion="1.3.0"
-    junitVersion="1.1.2"
+    junitVersionExt="1.1.2"
     firebaseCoreVersion="18.0.0"
     firebaseDatabaseVersion="19.5.1"
     firebaseAuthVersion="20.0.1"
@@ -60,19 +59,19 @@ ext {
     moxyXVersion="1.7.0"
     moxyXCompilerVersion="1.7.0"
     moxyXAndroidxVersion="1.7.0"
-    kotlonxCoroutinesAndroid="1.3.2"
-    junitVersion="4.13"
-    coreVersion="1.3.0"
+    kotlonxCoroutinesAndroid="1.3.9"
+    coreVersion="1.3.2"
     mockitoCoreVersion="3.0.0"
     mockitoInlineVersion="3.0.0"
-    androidJodaVersion="1.10.3"
-    jodaTimeVersion="2.10.3"
+    androidJodaVersion="2.10.3"
+    jodaTimeVersion="2.10.6"
     keyboardvisibilityeventVersion="3.0.0-RC2"
     materialSpinnerVersion="1.3.1"
     materialsearchviewVersion="1.4.0"
     libraryVersion="1.4.0"
     parisVersion="1.5.0"
     subsamplingScaleImageViewAndroidxVersion="3.10.0"
+    testCoreVersion="1.3.0"
 }
 
 task clean(type: Delete) {
